Closed Bug 248201 Opened 20 years ago Closed 20 years ago

necko should not overwrite specific error code when trying to resume a dir listing

Categories

(Core Graveyard :: Networking: FTP, defect)

defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED
mozilla1.8alpha2

People

(Reporter: Biesinger, Assigned: Biesinger)

References

()

Details

Attachments

(1 file)

// LIST
           case FTP_S_LIST:
             rv = S_list();

             if (NS_FAILED(rv))
                 mInternalError = NS_ERROR_FTP_CWD;

             MoveToNextState(FTP_R_LIST);

S_list sometimes returns NS_ERROR_NOT_RESUMABLE.

suggested patch:
 if (rv == NS_ERROR_NOT_RESUMABLE)
  mInternalError = rv;
 else if (NS_FAILED(rv))
  mInternalError = NS_ERROR_FTP_CWD;
Attachment #151475 - Flags: superreview?(darin)
Attachment #151475 - Flags: review?(dougt)
Status: NEW → ASSIGNED
Target Milestone: --- → mozilla1.8alpha2
Comment on attachment 151475 [details] [diff] [review]
patch

sr=darin
Attachment #151475 - Flags: superreview?(darin) → superreview+
Attachment #151475 - Flags: review?(dougt) → review+
Checking in nsFtpConnectionThread.cpp;
/cvsroot/mozilla/netwerk/protocol/ftp/src/nsFtpConnectionThread.cpp,v  <-- 
nsFtpConnectionThread.cpp
new revision: 1.282; previous revision: 1.281
done
Status: ASSIGNED → RESOLVED
Closed: 20 years ago
Resolution: --- → FIXED
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: