bug 248201 necko should not overwrite specific error code when trying to resume a dir listing r=dougt sr=darin